--- a/_posts/2020-01-22-template.md
+++ b/_posts/2020-01-22-template.md
@@ -1,31 +1,36 @@
 ---
-layout: post
+title: Title of project
+categories: ["python", "data", "public policy"]
+image: example.png
+visit: https://github.com/cimarron-io/research-scripts
 ---
 
-# Project name
-
-#### Description
+##### About
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 
+##### Details
 - **Date:** DD/MM/AAAA
 - **Place:** Ciudad, Estado.
 - **Website:** [www.codeandomexico.org](https://www.codeandomexico.org/)
 - **GitHub:** [github.com/CodeandoMexico](https://github.com/CodeandoMexico)
 
-#### Categories
+##### Description
 
-* Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-* Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-* Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+- **Theme 1**
+  Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+- **Theme 2**
+  Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+- **Theme 3**
+  Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-#### Contact
+##### Contact
 
 Project owners:
 
 - responsable1@proyecto.mx
 - responsable2@proyecto.mx
 
-#### Licence
+##### Licence
 
 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
