--- a/_posts/2020-04-10-RIPA-2018.md
+++ b/_posts/2020-04-10-RIPA-2018.md
@@ -2,7 +2,7 @@
 title: "RIPA 2018 - Wave 1"
 categories: ["public policy", "police", "criminal justice", "open data"]
 image: RIPA-2018.png
-visit: https://ripa-2018.datasettes.cimarron.io/
+visit: http://ripa-2018.datasettes.cimarron.io/
 ---
 
 ##### About
